--- a/src/scss/_grids.scss
+++ b/src/scss/_grids.scss
@@ -7,6 +7,8 @@
   align-items: center;
   grid-column-gap: 50px;
   column-gap: 50px;
+  grid-row-gap: 50px;
+  row-gap: 50px;
 }
 
 .grid-form {
